# jobradar

./: .env.example  .gitignore  =70.0  Makefile  README.md  SKILL.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  FINAL_ashby_companies.csv  FINAL_ashby_companies_list.txt  README.md  alembic.ini  ashby_companies.txt  main.py  pyproject.toml  requirements.txt  seed_qa_bank.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  003_add_ats_fields_to_company.py  005_create_resumes.py  006_create_preferences.py
backend/app/: config.py  database.py  main.py  redis_client.py  scheduler.py
backend/app/api/: applications.py  outreach.py  pipeline.py  qa_bank.py  router.py
backend/app/gmail/: classifier.py  connector.py
backend/app/llm/: client.py
backend/app/models/: __init__.py  application.py  company.py  outreach.py  pipeline.py  preferences.py  qa_bank.py
backend/app/pipeline/: graph.py  jobs.py  llm.py
backend/app/pipeline/nodes/: enrichment.py  funding_detector.py  scorer.py
backend/app/resumes/: profile.py
backend/app/schemas/: application.py  job.py
backend/app/scrapers/: __init__.py  base.py  crunchbase.py  hackernews.py  idealist.py  producthunt.py  reliefweb.py  techcrunch_rss.py  techjobsforgood.py  twitter_scraper.py  vc_scraper.py  yc_scraper.py
backend/app/scrapers/jobs/: ashby.py  greenhouse.py  lever.py  scorer.py  search.py
backend/apply_worker/: __init__.py  form_filler.py  main.py  qa_matcher.py  resume_picker.py  types.py
backend/data/: ashby_companies.json  ashby_missing_orgs.json  greenhouse_companies.json  greenhouse_missing_orgs.json  greenhouse_timeout_orgs.json  last_run.json  lever_companies.json  lever_missing_orgs.json  lever_timeout_orgs.json  missing_failures.json  own_careers_only.json  seen.json  verification_progress.json  verified_org_targets.json
backend/data/enriched/: .gitkeep
backend/data/enriched/ashby/: 0g.json  0x.json  10xteam.json  8fleet-inc.json  9-mothers.json  _skip_list.deprecated.json  _skip_list.json  a-place-for-mom.json  a-team.json  abe.json  abridge.json  absorblms.json  academia.json  accelevents.json  accord.json  accurx.json  ace-1-media.json  achilleshr.json  achira.json  aclima.json  acquird.json  acquisition.json  adaptive-ml.json  adaptyv.json  addi.json  adelphi-ai.json  adthena.json  aerovect.json  aescape.json  affinity.json  agavegames.json  agent.json  agi-inc.json  agreena.json  aidkit.json  aim4hire.json  airtasker.json  aisle.json  akasa.json  alan.json  (+1418 more)
backend/data/enriched/greenhouse/: 103644278.json  10alabs.json  10beauty.json  10xgenomics.json  12jlkfsk.json  12twenty.json  143studiosinc.json  1456754456yhgbhfg.json  14technology.json  1800contacts.json  1910genetics.json  1stdibscom.json  1uphealth.json  2026_summer_intern_program.json  204951305985924.json  21shares.json  240certification.json  240tutoringinc.json  2k.json  2kczech.json  2kearlycareers.json  2kmadrid.json  2u.json  2uinlinepromotions.json  30thstreetanimalhospital.json  31stunion.json  3cloud.json  3dayblindscorporate.json  3dayblindssales.json  3mgroofing.json  3redpartners.json  4dmoleculartherapeutics.json  4lu44n1n37w012k.json  500.json  5280.json  540.json  541.json  550.json  59studio.json  5minlab.json  (+4633 more)
backend/data/enriched/lever/: 15five.json  3eco.json  42dot.json  _skip_list.deprecated.json  _skip_list.json  abovelending.json  abt.json  accesssoftek.json  accurate.json  acselhealth.json  actriv.json  adhoclabs.json  adtech.json  aechelon.json  aerostrat.json  agilesearch.json  aicamp.json  aifi.json  aigen.json  airtm.json  aiwyn.json  alector.json  algorex.json  alliance.json  alltrails.json  allworknow.json  altarum.json  analogfolk.json  andersgroup.json  angel.json  anjuna.json  annalise.json  ansira.json  anyroad.json  anyscale.json  anzen.json  aofl.json  apax.json  aperturehealth.json  apolloagriculture.json  (+613 more)
backend/db/: __init__.py  audit.py  models.py  session.py
backend/db/migrations/: env.py  runner.py  script.py.mako
backend/db/migrations/versions/: 0001_initial_schema.py  0002_status_history_and_research_reports.py  0003_add_job_description.py  0003_add_paused_status.py  0004_jobs_health_views.py  0005_scanner_runs_boards_metadata.py  b1a536fd056f_merge_divergent_0003_heads_job_.py
backend/models/: graph_state.py
backend/pipeline/: graph.py
backend/pipeline/nodes/: funding.py  jobs.py  merge.py  ngo.py
backend/pipeline/nodes/funding/: producthunt.py  runner.py  startupgallary.py
backend/routes/: applications.py  companies.py  dashboard.py  jobs.py  outreach.py  pipeline.py  profile.py  qa_bank.py  resumes.py  scanner.py  settings.py
backend/scripts/: apply_worker_tick.py  boards_scan.py  enrich_org_profiles.py  migrate_legacy_profiles.py  oss_smoke.py  scrape_my_greenhouse.py
backend/scripts/_samples/: trending_python_live.html
backend/services/: __init__.py  board_seen.py  llm_client.py  profile_service.py  scoring_service.py
backend/storage/: __init__.py  supabase.py
backend/tests/: conftest.py  test_applications.py  test_apply_worker_main.py  test_apply_worker_tick.py  test_boards_scan.py  test_boards_scan_audit_log.py  test_companies.py  test_config.py  test_domain_runners.py  test_dotenv_loading.py  test_e2e_scan_to_jobs.py  test_enrich_org_profiles.py  test_filters.py  test_form_filler.py  test_job_board_runner.py  test_job_pipeline.py  test_job_scrapers.py  test_jobs.py  test_jobs_health_views.py  test_llm_client.py  test_migrate_legacy_profiles.py  test_migration_runner.py  test_missing_org_verifier.py  test_oss.py  test_outreach.py  test_pipeline.py  test_profile_service.py  test_qa_bank.py  test_qa_matcher.py  test_request_logging.py  test_resume_picker.py  test_resumes.py  test_scanner_hardening.py  test_scoring_service.py  test_scrape_my_greenhouse.py  test_seen.py  test_settings.py
backend/tests/test_api/: test_companies.py
backend/tests/test_pipeline/: test_graph.py
backend/tests/test_resumes/: test_extract.py  test_profile.py
backend/utils/: filters.py  http.py  logging.py  seen.py  time_check.py
(+8109 files in other folders)
