[project]
name = "jobradar-backend"
version = "0.1.0"
description = "JobRadar FastAPI backend — companies, jobs, applications, scanner pipeline, Supabase persistence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langgraph>=1.2.7",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "supabase>=2.4.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
# Pin a version of uv that understands the `[asyncio]` extras spec above.
required-version = ">=0.4.0"

# ---------------------------------------------------------------------------
# Build configuration.
#
# Explicit ``packages`` list — REQUIRED because setuptools ≥70.x fires the
# "Multiple top-level packages discovered in a flat-layout" safety check on
# ``pip install -e .`` BEFORE consulting the ``[tool.setuptools.packages.
# find]`` directive. The legacy find directive is removed; the explicit
# list bypasses the safety check and is the only reliable build shape
# for our flat layout on newer setuptools installs (the GHA worker uses
# a recent one).
#
# OMITTED from this list (NOT installed as Python packages):
#   * data         — JSON state files; not code
#   * tests        — pytest modules; not part of distribution
#   * scripts      — ad-hoc entry points (boots via ``python scripts/X.py``)
#   * apply_worker — out-of-process Playwright worker, separate entry point
#   * storage      — directory exists locally but is UNTRACKED in this
#                     branch, so the GHA clone doesn't have it and setuptools
#                     would refuse to install with ``package directory
#                     'storage' does not exist``. Nothing in the boards_scan
#                     runtime closure (script + runner + llm_client +
#                     settings) imports from ``storage``, so dropping it is
#                     safe. Once a separate PR ships its contents, re-add
#                     ``"storage"`` alphabetically between ``"services"``
#                     and ``"utils"``.
#
# ``models`` is included even though it lacks ``__init__.py`` because
# ``pipeline/nodes/merge.py`` and ``pipeline/graph.py`` do
# ``from models.graph_state import PipelineState``. PEP 420 namespace
# packaging (setuptools ≥61) handles it: the directory is installed as
# an implicit namespace package and ``from models.X import Y`` resolves.
# Setuptools may emit a ``UserWarning`` about the missing ``__init__.py``
# — that's cosmetic, NOT a build failure.
# ---------------------------------------------------------------------------
[tool.setuptools]
packages = [
    "cache",
    "db",
    "models",
    "pipeline",
    "routes",
    "services",
    "utils",
]
