[project]
name = "jobradar-backend"
version = "0.1.0"
description = "JobRadar FastAPI backend — companies, jobs, applications, scanner pipeline, Supabase persistence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langgraph>=1.2.7",
    # ``openai`` is required by ``services/llm_client.py`` — the scoring
    # client uses ``openai.AsyncOpenAI`` as a unified driver for BOTH
    # NVIDIA NIM (``integrate.api.nvidia.com/v1``) and Groq
    # (``api.groq.com/openai/v1``) because both vendors expose
    # OpenAI-compatible chat-completions APIs. We override ``base_url``
    # at client-construction time to swap endpoints. ``>=1.40`` is the
    # minimum that ships the AsyncOpenAI + the AuthenticationError /
    # BadRequestError / RateLimitError / NotFoundError exception set the
    # file imports. Without this line, ``pip install -e .`` (which
    # reads pyproject.toml and ignores requirements.txt) would not
    # install openai and ``from openai import …`` would raise
    # ModuleNotFoundError at boards_scan import time — which is the
    # failure mode we're fixing right now.
    "openai>=1.40",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    # ``python-multipart`` is required by FastAPI for any route that
    # accepts form data — in our case ``routes/resumes.py:@router.post
    # ("")`` uses ``UploadFile`` for resume file uploads. Without it,
    # ``uvicorn`` raises ``RuntimeError: Form data requires
    # "python-multipart" to be installed.`` at route-decorator time
    # (import time, NOT request time), which crashes the Render
    # deployment. ``>=0.0.9`` is the minimum that fixes the
    # ``TypeError: string argument without an encoding`` crash on
    # multipart parses in older 0.0.x releases.
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.30",
    "supabase>=2.4.0",
    "uvicorn>=0.30.0",
]

# Test-only dependencies. Kept separate from the runtime ``dependencies``
# block above so ``pip install -e .`` (production target) doesn't pull
# in the pytest + httpx test stack. Listed under ``[dependency-groups]``
# per PEP 735 so the modern ``uv add --group test`` workflow is the
# canonical install path; the legacy ``[project.optional-dependencies]``
# block below preserves compatibility with the older
# ``pip install -e .[test]`` shape that some CI scripts still use.
[dependency-groups]
test = [
    # ``httpx`` is the in-process ASGI client used by the test suite
    # (httpx.AsyncClient + ASGITransport). Already a transitive
    # dependency of FastAPI's ``TestClient`` but pinned here so a
    # future FastAPI bump doesn't quietly swap the ASGITransport API
    # the test fixtures rely on.
    "httpx>=0.27",
    "pytest>=8.0",
    # ``pytest-asyncio`` drives the async test methods + async fixtures
    # the suite uses after the v0.5 refactor away from
    # ``asyncio.run()`` bridges in unittest.TestCase setUp hooks. The
    # ``asyncio_mode = "auto"`` setting in ``[tool.pytest.ini_options]``
    # below lets every ``async def test_*`` + ``@pytest_asyncio.fixture``
    # be recognized without per-test ``@pytest.mark.asyncio`` decoration.
    # ``>=0.23`` is the minimum that ships ``asyncio_default_fixture_loop_scope``
    # so we can pin the loop scope in one place.
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
# Pin a version of uv that understands the `[asyncio]` extras spec above.
required-version = ">=0.4.0"

[tool.pytest.ini_options]
# ``asyncio_mode = "auto"`` — every ``async def test_*`` + every
# ``@pytest_asyncio.fixture`` is recognized without per-test
# ``@pytest.mark.asyncio`` decoration. Cuts ceremony and matches
# the canonical pytest-asyncio pattern for suites that have
# already committed to async test methods.
#
# Why NOT the ``unittest.TestCase`` sync bridge the suite used to
# rely on: ``setUp`` called ``asyncio.run(coro)`` to seed the DB
# from a sync test body. With pytest-asyncio installed (the suite
# pulls it in for any future async-test author) the session loop
# is alive in the test thread, so the nested ``asyncio.run`` raises
# ``RuntimeError: asyncio.run() cannot be called from a running
# event loop``. Async fixtures + async test methods keep every
# coroutine on the same loop the runner provides.
asyncio_mode = "auto"

# Function-scoped loop matches the per-test NullPool the test
# engine in ``db/session.py`` already configures via
# ``JOBRADAR_TEST_DB=1``. Each test gets a fresh loop + fresh
# connection, so a connection bound to a previous test's closed
# loop never re-raises ``Task ... attached to a different loop``.
asyncio_default_fixture_loop_scope = "function"

# ---------------------------------------------------------------------------
# Build configuration.
#
# Explicit ``packages`` list — REQUIRED because setuptools ≥70.x fires the
# "Multiple top-level packages discovered in a flat-layout" safety check on
# ``pip install -e .`` BEFORE consulting the ``[tool.setuptools.packages.
# find]`` directive. The legacy find directive is removed; the explicit
# list bypasses the safety check and is the only reliable build shape
# for our flat layout on newer setuptools installs (the GHA worker uses
# a recent one).
#
# OMITTED from this list (NOT installed as Python packages):
#   * data         — JSON state files; not code
#   * tests        — pytest modules; not part of distribution
#   * scripts      — ad-hoc entry points (boots via ``python scripts/X.py``)
#   * apply_worker — out-of-process Playwright worker, separate entry point
#   * storage      — directory exists locally but is UNTRACKED in this
#                     branch, so the GHA clone doesn't have it and setuptools
#                     would refuse to install with ``package directory
#                     'storage' does not exist``. Nothing in the boards_scan
#                     runtime closure (script + runner + llm_client +
#                     settings) imports from ``storage``, so dropping it is
#                     safe. Once a separate PR ships its contents, re-add
#                     ``"storage"`` alphabetically between ``"services"``
#                     and ``"utils"``.
#
# ``models`` is included even though it lacks ``__init__.py`` because
# ``pipeline/nodes/merge.py`` and ``pipeline/graph.py`` do
# ``from models.graph_state import PipelineState``. PEP 420 namespace
# packaging (setuptools ≥61) handles it: the directory is installed as
# an implicit namespace package and ``from models.X import Y`` resolves.
# Setuptools may emit a ``UserWarning`` about the missing ``__init__.py``
# — that's cosmetic, NOT a build failure.
# ---------------------------------------------------------------------------
[tool.setuptools]
packages = [
    "cache",
    "db",
    "models",
    "pipeline",
    "routes",
    "services",
    "utils",
]
